zafer-app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: zafer-app
  labels:
    app: zafer-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 3000
  selector:
    app: zafer-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zafer-app
  labels:
    app: zafer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zafer-app
  template:
    metadata:
      labels:
        app: zafer-app
    spec:
      containers:
      - name: zafer-app
        image: 125378330806.dkr.ecr.eu-west-1.amazonaws.com/zu-cct-capstone:0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zafer-app
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: >-
      x-recaptcha, Accept, Authorization, DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Access-Control-Allow-Origin
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    # nginx.ingress.kubernetes.io/limit-connections: '100'
    # nginx.ingress.kubernetes.io/limit-rps: '10'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: nginx
  rules:
  - host: shop.zu-cct-capstone.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zafer-app
            port:
              number: 8080
